--- a/css/treeview/index.html
+++ b/css/treeview/index.html
@@ -31,6 +31,7 @@
                             <ul>
                                 <li>Uranus</li>
                                 <li>Neptune</li>
+                                <li>Mars</li>
                             </ul>
                         </details>
                     </li>
